--- a/Binglove/app/src/main/res/values/strings.xml
+++ b/Binglove/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Binglove</string>
+    <string name="chinamobile">移动登记</string>
+    <string name="chinaunicom">联通登记</string>
+    <string name="CHINATELECOM">电信登记</string>
+    <string name="sim">全球通开户</string>
 </resources>
