--- a/Binglove/app/src/main/res/values/strings.xml
+++ b/Binglove/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="chinaunicom">联通登记</string>
     <string name="CHINATELECOM">电信登记</string>
     <string name="sim">全球通开户</string>
+    <string name="tutorials">使用教程</string>
 </resources>
