--- a/Binglove/app/src/main/res/values/strings.xml
+++ b/Binglove/app/src/main/res/values/strings.xml
@@ -5,4 +5,21 @@
     <string name="CHINATELECOM">电信登记</string>
     <string name="sim">全球通开户</string>
     <string name="tutorials">使用教程</string>
+    <string name="phoneNumber">手机号码</string>
+    <string name="servicePassword">服务密码</string>
+    <string name="readCard">读取卡号</string>
+    <string name="picture">图像</string>
+    <string name="name">姓名</string>
+    <string name="sex">性别</string>
+    <string name="cardStyle">证件类型</string>
+    <string name="cardNumber">身份证号</string>
+    <string name="birthday">出生日期</string>
+    <string name="visaOffice">签证机关</string>
+    <string name="TimeForVisa">签证时间</string>
+    <string name="failureTime">失效时间</string>
+    <string name="address">地址</string>
+    <string name="idCard">身份证</string>
+    <string name="GetCard">获取身份证</string>
+
+    <string name="commit">提交</string>
 </resources>
